// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button matches snapshots Icon only displayStyle: 2 size: undefined disabled: false 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: none;
  -webkit-transition: background 250ms ease-in-out, color 250ms ease-in-out, border 250ms ease-in-out;
  transition: background 250ms ease-in-out, color 250ms ease-in-out, border 250ms ease-in-out;
  cursor: pointer;
  outline: none;
  box-sizing: border-box;
  width: 28rem;
  opacity: 0.6;
  -webkit-transition: opacity 250ms ease-in-out;
  transition: opacity 250ms ease-in-out;
  border-radius: 0.2rem;
  width: 2.4rem;
  height: 2.4rem;
  background: transparent;
  border: none;
}

.c0:hover {
  background: #f4f5f6;
  opacity: 1;
}

.c0 svg {
  height: initial;
  width: initial;
}

<button
  class="c0"
  size="2"
  type="button"
/>
`;

exports[`Button matches snapshots Links displayStyle: 4 size: undefined disabled: false 1`] = `
.c1 {
  margin: 0;
  font-size: 1.2rem;
  line-height: 1.67;
  font-weight: 400;
  -webkit-letter-spacing: 0.1rem;
  -moz-letter-spacing: 0.1rem;
  -ms-letter-spacing: 0.1rem;
  letter-spacing: 0.1rem;
  text-transform: uppercase;
  color: #000000;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: none;
  -webkit-transition: background 250ms ease-in-out, color 250ms ease-in-out, border 250ms ease-in-out;
  transition: background 250ms ease-in-out, color 250ms ease-in-out, border 250ms ease-in-out;
  cursor: pointer;
  outline: none;
  box-sizing: border-box;
  width: 28rem;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  height: 2.4rem;
  padding: 0;
  border: none;
  opacity: 0.8;
  width: 100%;
}

.c0:hover {
  opacity: 1;
}

.c2 {
  white-space: nowrap;
}

<button
  class="c0"
  size="2"
  type="button"
>
  <p
    class="c1 c2"
    color="primary"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Links displayStyle: 4 size: undefined disabled: false 2`] = `
.c3 {
  margin: 0;
  font-size: 1.2rem;
  line-height: 1.67;
  font-weight: 400;
  -webkit-letter-spacing: 0.1rem;
  -moz-letter-spacing: 0.1rem;
  -ms-letter-spacing: 0.1rem;
  letter-spacing: 0.1rem;
  text-transform: uppercase;
  color: #000000;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 2.8rem;
  width: 2.8rem;
  position: relative;
  font-style: normal;
}

.c1 svg {
  width: 100%;
  height: 100%;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: none;
  -webkit-transition: background 250ms ease-in-out, color 250ms ease-in-out, border 250ms ease-in-out;
  transition: background 250ms ease-in-out, color 250ms ease-in-out, border 250ms ease-in-out;
  cursor: pointer;
  outline: none;
  box-sizing: border-box;
  width: 28rem;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  height: 2.4rem;
  padding: 0;
  border: none;
  opacity: 0.8;
  width: 100%;
}

.c0:hover {
  opacity: 1;
}

.c2 {
  margin-right: 0.4rem;
}

.c4 {
  white-space: nowrap;
}

<a
  class="c0"
  href="http://www.google.pl"
  size="2"
  target="_blank"
>
  <span
    class="c1 c2"
    data-testid="icon-Upload"
    height="2.8"
    width="2.8"
  >
    <test-file-stub
      image="test-file-stub"
    />
  </span>
  <p
    class="c3 c4"
    color="primary"
  >
    Click
  </p>
</a>
`;

exports[`Button matches snapshots Links displayStyle: 5 size: undefined disabled: false 1`] = `
.c1 {
  margin: 0;
  font-size: 1.6rem;
  line-height: 1.5;
  -webkit-letter-spacing: 0.02rem;
  -moz-letter-spacing: 0.02rem;
  -ms-letter-spacing: 0.02rem;
  letter-spacing: 0.02rem;
  color: #000000;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: none;
  -webkit-transition: background 250ms ease-in-out, color 250ms ease-in-out, border 250ms ease-in-out;
  transition: background 250ms ease-in-out, color 250ms ease-in-out, border 250ms ease-in-out;
  cursor: pointer;
  outline: none;
  box-sizing: border-box;
  width: 28rem;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  height: 3.2rem;
  padding: 0;
  border: none;
  border-radius: 0.2rem;
  width: 100%;
}

.c0:hover {
  background-color: #f4f5f6;
}

.c2 {
  white-space: nowrap;
}

<button
  class="c0"
  size="2"
  type="button"
>
  <p
    class="c1 c2"
    color="primary"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Links displayStyle: 5 size: undefined disabled: false 2`] = `
.c3 {
  margin: 0;
  font-size: 1.6rem;
  line-height: 1.5;
  -webkit-letter-spacing: 0.02rem;
  -moz-letter-spacing: 0.02rem;
  -ms-letter-spacing: 0.02rem;
  letter-spacing: 0.02rem;
  color: #000000;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 2.8rem;
  width: 2.8rem;
  position: relative;
  font-style: normal;
}

.c1 svg {
  width: 100%;
  height: 100%;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: none;
  -webkit-transition: background 250ms ease-in-out, color 250ms ease-in-out, border 250ms ease-in-out;
  transition: background 250ms ease-in-out, color 250ms ease-in-out, border 250ms ease-in-out;
  cursor: pointer;
  outline: none;
  box-sizing: border-box;
  width: 28rem;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  height: 3.2rem;
  padding: 0;
  border: none;
  border-radius: 0.2rem;
  width: 100%;
}

.c0:hover {
  background-color: #f4f5f6;
}

.c2 {
  margin-right: 0.4rem;
}

.c4 {
  white-space: nowrap;
}

<a
  class="c0"
  href="http://www.google.pl"
  size="2"
  target="_blank"
>
  <span
    class="c1 c2"
    data-testid="icon-Upload"
    height="2.8"
    width="2.8"
  >
    <test-file-stub
      image="test-file-stub"
    />
  </span>
  <p
    class="c3 c4"
    color="primary"
  >
    Click
  </p>
</a>
`;

exports[`Button matches snapshots Links displayStyle: 6 size: undefined disabled: false 1`] = `
.c1 {
  margin: 0;
  font-size: 1.2rem;
  line-height: 1.67;
  font-weight: 400;
  -webkit-letter-spacing: 0.1rem;
  -moz-letter-spacing: 0.1rem;
  -ms-letter-spacing: 0.1rem;
  letter-spacing: 0.1rem;
  text-transform: uppercase;
  color: #000000;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: none;
  -webkit-transition: background 250ms ease-in-out, color 250ms ease-in-out, border 250ms ease-in-out;
  transition: background 250ms ease-in-out, color 250ms ease-in-out, border 250ms ease-in-out;
  cursor: pointer;
  outline: none;
  box-sizing: border-box;
  width: 28rem;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  height: 4rem;
  padding: 0.8rem;
  border: none;
  border-radius: 0.2rem;
  font-weight: 400;
  width: 100%;
}

.c0:hover {
  background-color: #f4f5f6;
}

.c0:hover p {
  color: #40749a;
}

.c0:hover g path {
  fill: #40749a;
}

.c0 g path {
  fill: #6d9bbc;
}

.c0 p {
  color: #6d9bbc;
}

.c2 {
  white-space: nowrap;
}

<button
  class="c0"
  size="2"
  type="button"
>
  <p
    class="c1 c2"
    color="primary"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Links displayStyle: 6 size: undefined disabled: false 2`] = `
.c3 {
  margin: 0;
  font-size: 1.2rem;
  line-height: 1.67;
  font-weight: 400;
  -webkit-letter-spacing: 0.1rem;
  -moz-letter-spacing: 0.1rem;
  -ms-letter-spacing: 0.1rem;
  letter-spacing: 0.1rem;
  text-transform: uppercase;
  color: #000000;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 2.8rem;
  width: 2.8rem;
  position: relative;
  font-style: normal;
}

.c1 svg {
  width: 100%;
  height: 100%;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: none;
  -webkit-transition: background 250ms ease-in-out, color 250ms ease-in-out, border 250ms ease-in-out;
  transition: background 250ms ease-in-out, color 250ms ease-in-out, border 250ms ease-in-out;
  cursor: pointer;
  outline: none;
  box-sizing: border-box;
  width: 28rem;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  height: 4rem;
  padding: 0.8rem;
  border: none;
  border-radius: 0.2rem;
  font-weight: 400;
  width: 100%;
}

.c0:hover {
  background-color: #f4f5f6;
}

.c0:hover p {
  color: #40749a;
}

.c0:hover g path {
  fill: #40749a;
}

.c0 g path {
  fill: #6d9bbc;
}

.c0 p {
  color: #6d9bbc;
}

.c2 {
  margin: 0 0.8rem 0 0;
}

.c4 {
  white-space: nowrap;
}

<a
  class="c0"
  href="http://www.google.pl"
  size="2"
  target="_blank"
>
  <span
    class="c1 c2"
    data-testid="icon-Upload"
    height="2.8"
    width="2.8"
  >
    <test-file-stub
      image="test-file-stub"
    />
  </span>
  <p
    class="c3 c4"
    color="primary"
  >
    Click
  </p>
</a>
`;

exports[`Button matches snapshots Links displayStyle: 7 size: undefined disabled: false 1`] = `
.c1 {
  margin: 0;
  font-size: 1.6rem;
  line-height: 1.5;
  -webkit-letter-spacing: 0.02rem;
  -moz-letter-spacing: 0.02rem;
  -ms-letter-spacing: 0.02rem;
  letter-spacing: 0.02rem;
  color: #000000;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: none;
  -webkit-transition: background 250ms ease-in-out, color 250ms ease-in-out, border 250ms ease-in-out;
  transition: background 250ms ease-in-out, color 250ms ease-in-out, border 250ms ease-in-out;
  cursor: pointer;
  outline: none;
  box-sizing: border-box;
  width: 28rem;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  height: 4rem;
  padding: 0.4rem;
  border: none;
  border-radius: 0.4rem;
  font-weight: 400;
  width: 100%;
}

.c0.active {
  background-color: #f4f5f6;
}

.c0.active * {
  color: #000000;
}

.c0.active svg {
  opacity: 1;
  -webkit-transition: opacity 500ms ease;
  transition: opacity 500ms ease;
}

.c0:hover {
  background-color: #f4f5f6;
}

.c0:hover * {
  color: #000000;
}

.c0:hover svg {
  opacity: 1;
  -webkit-transition: opacity 500ms ease;
  transition: opacity 500ms ease;
}

.c0 svg {
  opacity: 0.6;
}

.c0 p {
  color: #6a6a6a;
}

.c2 {
  white-space: nowrap;
}

<button
  class="c0"
  size="2"
  type="button"
>
  <p
    class="c1 c2"
    color="primary"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Links displayStyle: 7 size: undefined disabled: false 2`] = `
.c3 {
  margin: 0;
  font-size: 1.6rem;
  line-height: 1.5;
  -webkit-letter-spacing: 0.02rem;
  -moz-letter-spacing: 0.02rem;
  -ms-letter-spacing: 0.02rem;
  letter-spacing: 0.02rem;
  color: #000000;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 2.8rem;
  width: 2.8rem;
  position: relative;
  font-style: normal;
}

.c1 svg {
  width: 100%;
  height: 100%;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: none;
  -webkit-transition: background 250ms ease-in-out, color 250ms ease-in-out, border 250ms ease-in-out;
  transition: background 250ms ease-in-out, color 250ms ease-in-out, border 250ms ease-in-out;
  cursor: pointer;
  outline: none;
  box-sizing: border-box;
  width: 28rem;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  height: 4rem;
  padding: 0.4rem;
  border: none;
  border-radius: 0.4rem;
  font-weight: 400;
  width: 100%;
}

.c0.active {
  background-color: #f4f5f6;
}

.c0.active * {
  color: #000000;
}

.c0.active svg {
  opacity: 1;
  -webkit-transition: opacity 500ms ease;
  transition: opacity 500ms ease;
}

.c0:hover {
  background-color: #f4f5f6;
}

.c0:hover * {
  color: #000000;
}

.c0:hover svg {
  opacity: 1;
  -webkit-transition: opacity 500ms ease;
  transition: opacity 500ms ease;
}

.c0 svg {
  opacity: 0.6;
}

.c0 p {
  color: #6a6a6a;
}

.c2 {
  margin: 0 0.8rem 0 0;
}

.c4 {
  white-space: nowrap;
}

<a
  class="c0"
  href="http://www.google.pl"
  size="2"
  target="_blank"
>
  <span
    class="c1 c2"
    data-testid="icon-Upload"
    height="2.8"
    width="2.8"
  >
    <test-file-stub
      image="test-file-stub"
    />
  </span>
  <p
    class="c3 c4"
    color="primary"
  >
    Click
  </p>
</a>
`;

exports[`Button matches snapshots Links displayStyle: 8 size: undefined disabled: false 1`] = `
.c1 {
  margin: 0;
  font-size: 1.6rem;
  line-height: 1.5;
  -webkit-letter-spacing: 0.02rem;
  -moz-letter-spacing: 0.02rem;
  -ms-letter-spacing: 0.02rem;
  letter-spacing: 0.02rem;
  color: #000000;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: none;
  -webkit-transition: background 250ms ease-in-out, color 250ms ease-in-out, border 250ms ease-in-out;
  transition: background 250ms ease-in-out, color 250ms ease-in-out, border 250ms ease-in-out;
  cursor: pointer;
  outline: none;
  box-sizing: border-box;
  width: 28rem;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  height: 100%;
  padding: 0.8rem;
  border: none;
  position: relative;
  width: 100%;
  color: #6a6a6a;
}

.c0:after {
  content: "";
  position: absolute;
  display: block;
  bottom: 0;
  left: 0;
  width: 0;
  height: 0.2rem;
  background-color: #000000;
  -webkit-transition: width 500ms ease;
  transition: width 500ms ease;
}

.c0:hover {
  color: #3b3f42;
}

.c0:hover svg {
  opacity: 0.9;
}

.c0 p {
  color: #6a6a6a;
}

.c0.active {
  color: #000000;
}

.c0.active:after {
  width: 100%;
}

.c0.active svg {
  opacity: 1;
}

.c0 svg {
  opacity: 0.75;
}

.c2 {
  white-space: nowrap;
}

<button
  class="c0"
  size="2"
  type="button"
>
  <p
    class="c1 c2"
    color="primary"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Links displayStyle: 8 size: undefined disabled: false 2`] = `
.c3 {
  margin: 0;
  font-size: 1.6rem;
  line-height: 1.5;
  -webkit-letter-spacing: 0.02rem;
  -moz-letter-spacing: 0.02rem;
  -ms-letter-spacing: 0.02rem;
  letter-spacing: 0.02rem;
  color: #000000;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 2.8rem;
  width: 2.8rem;
  position: relative;
  font-style: normal;
}

.c1 svg {
  width: 100%;
  height: 100%;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: none;
  -webkit-transition: background 250ms ease-in-out, color 250ms ease-in-out, border 250ms ease-in-out;
  transition: background 250ms ease-in-out, color 250ms ease-in-out, border 250ms ease-in-out;
  cursor: pointer;
  outline: none;
  box-sizing: border-box;
  width: 28rem;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  height: 100%;
  padding: 0.8rem;
  border: none;
  position: relative;
  width: 100%;
  color: #6a6a6a;
}

.c0:after {
  content: "";
  position: absolute;
  display: block;
  bottom: 0;
  left: 0;
  width: 0;
  height: 0.2rem;
  background-color: #000000;
  -webkit-transition: width 500ms ease;
  transition: width 500ms ease;
}

.c0:hover {
  color: #3b3f42;
}

.c0:hover svg {
  opacity: 0.9;
}

.c0 p {
  color: #6a6a6a;
}

.c0.active {
  color: #000000;
}

.c0.active:after {
  width: 100%;
}

.c0.active svg {
  opacity: 1;
}

.c0 svg {
  opacity: 0.75;
}

.c2 {
  margin: 0 0.8rem 0 0;
}

.c4 {
  white-space: nowrap;
}

<a
  class="c0"
  href="http://www.google.pl"
  size="2"
  target="_blank"
>
  <span
    class="c1 c2"
    data-testid="icon-Upload"
    height="2.8"
    width="2.8"
  >
    <test-file-stub
      image="test-file-stub"
    />
  </span>
  <p
    class="c3 c4"
    color="primary"
  >
    Click
  </p>
</a>
`;

exports[`Button matches snapshots Standard/fixed width displayStyle: 0 size: 0 disabled: false 1`] = `
.c1 {
  margin: 0;
  font-size: 1.2rem;
  line-height: 1.67;
  font-weight: 400;
  -webkit-letter-spacing: 0.1rem;
  -moz-letter-spacing: 0.1rem;
  -ms-letter-spacing: 0.1rem;
  letter-spacing: 0.1rem;
  text-transform: uppercase;
  color: #000000;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: none;
  -webkit-transition: background 250ms ease-in-out, color 250ms ease-in-out, border 250ms ease-in-out;
  transition: background 250ms ease-in-out, color 250ms ease-in-out, border 250ms ease-in-out;
  cursor: pointer;
  outline: none;
  box-sizing: border-box;
  width: 13.2rem;
  height: 4rem;
  border-radius: 0.4rem;
  background: #3b3f42;
  border: 0.1rem solid #3b3f42;
}

.c0:hover {
  background: #000000;
}

.c0 g path {
  fill: #ffffff;
}

.c0 p {
  color: #ffffff;
}

.c2 {
  white-space: nowrap;
}

<button
  class="c0"
  type="button"
>
  <p
    class="c1 c2"
    color="primary"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width displayStyle: 0 size: 0 disabled: true 1`] = `
.c1 {
  margin: 0;
  font-size: 1.2rem;
  line-height: 1.67;
  font-weight: 400;
  -webkit-letter-spacing: 0.1rem;
  -moz-letter-spacing: 0.1rem;
  -ms-letter-spacing: 0.1rem;
  letter-spacing: 0.1rem;
  text-transform: uppercase;
  color: #000000;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: none;
  -webkit-transition: background 250ms ease-in-out, color 250ms ease-in-out, border 250ms ease-in-out;
  transition: background 250ms ease-in-out, color 250ms ease-in-out, border 250ms ease-in-out;
  cursor: pointer;
  outline: none;
  box-sizing: border-box;
  width: 13.2rem;
  pointer-events: none;
  height: 4rem;
  border-radius: 0.4rem;
  background: #3b3f42;
  border: 0.1rem solid #3b3f42;
  background: #d2d6db;
  border: 0.1rem solid #d2d6db;
}

.c0:hover {
  background: #000000;
}

.c0 g path {
  fill: #ffffff;
}

.c0 p {
  color: #ffffff;
}

.c0 p {
  color: #6a6a6a;
}

.c0 g path {
  fill: #6a6a6a;
}

.c2 {
  white-space: nowrap;
}

<button
  class="c0"
  disabled=""
  type="button"
>
  <p
    class="c1 c2"
    color="primary"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width displayStyle: 0 size: 1 disabled: false 1`] = `
.c1 {
  margin: 0;
  font-size: 1.2rem;
  line-height: 1.67;
  font-weight: 400;
  -webkit-letter-spacing: 0.1rem;
  -moz-letter-spacing: 0.1rem;
  -ms-letter-spacing: 0.1rem;
  letter-spacing: 0.1rem;
  text-transform: uppercase;
  color: #000000;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: none;
  -webkit-transition: background 250ms ease-in-out, color 250ms ease-in-out, border 250ms ease-in-out;
  transition: background 250ms ease-in-out, color 250ms ease-in-out, border 250ms ease-in-out;
  cursor: pointer;
  outline: none;
  box-sizing: border-box;
  width: 17.6rem;
  height: 4rem;
  border-radius: 0.4rem;
  background: #3b3f42;
  border: 0.1rem solid #3b3f42;
}

.c0:hover {
  background: #000000;
}

.c0 g path {
  fill: #ffffff;
}

.c0 p {
  color: #ffffff;
}

.c2 {
  white-space: nowrap;
}

<button
  class="c0"
  size="1"
  type="button"
>
  <p
    class="c1 c2"
    color="primary"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width displayStyle: 0 size: 1 disabled: true 1`] = `
.c1 {
  margin: 0;
  font-size: 1.2rem;
  line-height: 1.67;
  font-weight: 400;
  -webkit-letter-spacing: 0.1rem;
  -moz-letter-spacing: 0.1rem;
  -ms-letter-spacing: 0.1rem;
  letter-spacing: 0.1rem;
  text-transform: uppercase;
  color: #000000;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: none;
  -webkit-transition: background 250ms ease-in-out, color 250ms ease-in-out, border 250ms ease-in-out;
  transition: background 250ms ease-in-out, color 250ms ease-in-out, border 250ms ease-in-out;
  cursor: pointer;
  outline: none;
  box-sizing: border-box;
  width: 17.6rem;
  pointer-events: none;
  height: 4rem;
  border-radius: 0.4rem;
  background: #3b3f42;
  border: 0.1rem solid #3b3f42;
  background: #d2d6db;
  border: 0.1rem solid #d2d6db;
}

.c0:hover {
  background: #000000;
}

.c0 g path {
  fill: #ffffff;
}

.c0 p {
  color: #ffffff;
}

.c0 p {
  color: #6a6a6a;
}

.c0 g path {
  fill: #6a6a6a;
}

.c2 {
  white-space: nowrap;
}

<button
  class="c0"
  disabled=""
  size="1"
  type="button"
>
  <p
    class="c1 c2"
    color="primary"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width displayStyle: 0 size: 2 disabled: false 1`] = `
.c1 {
  margin: 0;
  font-size: 1.2rem;
  line-height: 1.67;
  font-weight: 400;
  -webkit-letter-spacing: 0.1rem;
  -moz-letter-spacing: 0.1rem;
  -ms-letter-spacing: 0.1rem;
  letter-spacing: 0.1rem;
  text-transform: uppercase;
  color: #000000;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: none;
  -webkit-transition: background 250ms ease-in-out, color 250ms ease-in-out, border 250ms ease-in-out;
  transition: background 250ms ease-in-out, color 250ms ease-in-out, border 250ms ease-in-out;
  cursor: pointer;
  outline: none;
  box-sizing: border-box;
  width: 28rem;
  height: 4rem;
  border-radius: 0.4rem;
  background: #3b3f42;
  border: 0.1rem solid #3b3f42;
}

.c0:hover {
  background: #000000;
}

.c0 g path {
  fill: #ffffff;
}

.c0 p {
  color: #ffffff;
}

.c2 {
  white-space: nowrap;
}

<button
  class="c0"
  size="2"
  type="button"
>
  <p
    class="c1 c2"
    color="primary"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width displayStyle: 0 size: 2 disabled: true 1`] = `
.c1 {
  margin: 0;
  font-size: 1.2rem;
  line-height: 1.67;
  font-weight: 400;
  -webkit-letter-spacing: 0.1rem;
  -moz-letter-spacing: 0.1rem;
  -ms-letter-spacing: 0.1rem;
  letter-spacing: 0.1rem;
  text-transform: uppercase;
  color: #000000;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: none;
  -webkit-transition: background 250ms ease-in-out, color 250ms ease-in-out, border 250ms ease-in-out;
  transition: background 250ms ease-in-out, color 250ms ease-in-out, border 250ms ease-in-out;
  cursor: pointer;
  outline: none;
  box-sizing: border-box;
  width: 28rem;
  pointer-events: none;
  height: 4rem;
  border-radius: 0.4rem;
  background: #3b3f42;
  border: 0.1rem solid #3b3f42;
  background: #d2d6db;
  border: 0.1rem solid #d2d6db;
}

.c0:hover {
  background: #000000;
}

.c0 g path {
  fill: #ffffff;
}

.c0 p {
  color: #ffffff;
}

.c0 p {
  color: #6a6a6a;
}

.c0 g path {
  fill: #6a6a6a;
}

.c2 {
  white-space: nowrap;
}

<button
  class="c0"
  disabled=""
  size="2"
  type="button"
>
  <p
    class="c1 c2"
    color="primary"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width displayStyle: 1 size: 0 disabled: false 1`] = `
.c1 {
  margin: 0;
  font-size: 1.2rem;
  line-height: 1.67;
  font-weight: 400;
  -webkit-letter-spacing: 0.1rem;
  -moz-letter-spacing: 0.1rem;
  -ms-letter-spacing: 0.1rem;
  letter-spacing: 0.1rem;
  text-transform: uppercase;
  color: #000000;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: none;
  -webkit-transition: background 250ms ease-in-out, color 250ms ease-in-out, border 250ms ease-in-out;
  transition: background 250ms ease-in-out, color 250ms ease-in-out, border 250ms ease-in-out;
  cursor: pointer;
  outline: none;
  box-sizing: border-box;
  width: 13.2rem;
  height: 4rem;
  border-radius: 0.4rem;
  border: 0.1rem solid #000000;
}

.c0 g path {
  fill: #000000;
}

.c0:hover {
  background: #f4f5f6;
}

.c2 {
  white-space: nowrap;
}

<button
  class="c0"
  type="button"
>
  <p
    class="c1 c2"
    color="primary"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width displayStyle: 1 size: 0 disabled: true 1`] = `
.c1 {
  margin: 0;
  font-size: 1.2rem;
  line-height: 1.67;
  font-weight: 400;
  -webkit-letter-spacing: 0.1rem;
  -moz-letter-spacing: 0.1rem;
  -ms-letter-spacing: 0.1rem;
  letter-spacing: 0.1rem;
  text-transform: uppercase;
  color: #000000;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: none;
  -webkit-transition: background 250ms ease-in-out, color 250ms ease-in-out, border 250ms ease-in-out;
  transition: background 250ms ease-in-out, color 250ms ease-in-out, border 250ms ease-in-out;
  cursor: pointer;
  outline: none;
  box-sizing: border-box;
  width: 13.2rem;
  pointer-events: none;
  height: 4rem;
  border-radius: 0.4rem;
  border: 0.1rem solid #000000;
  border: 0.1rem solid #d2d6db;
}

.c0 g path {
  fill: #000000;
}

.c0 p {
  color: #a5a5a5;
}

.c0 g path {
  fill: #a5a5a5;
}

.c0:hover {
  background: #f4f5f6;
}

.c2 {
  white-space: nowrap;
}

<button
  class="c0"
  disabled=""
  type="button"
>
  <p
    class="c1 c2"
    color="primary"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width displayStyle: 1 size: 1 disabled: false 1`] = `
.c1 {
  margin: 0;
  font-size: 1.2rem;
  line-height: 1.67;
  font-weight: 400;
  -webkit-letter-spacing: 0.1rem;
  -moz-letter-spacing: 0.1rem;
  -ms-letter-spacing: 0.1rem;
  letter-spacing: 0.1rem;
  text-transform: uppercase;
  color: #000000;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: none;
  -webkit-transition: background 250ms ease-in-out, color 250ms ease-in-out, border 250ms ease-in-out;
  transition: background 250ms ease-in-out, color 250ms ease-in-out, border 250ms ease-in-out;
  cursor: pointer;
  outline: none;
  box-sizing: border-box;
  width: 17.6rem;
  height: 4rem;
  border-radius: 0.4rem;
  border: 0.1rem solid #000000;
}

.c0 g path {
  fill: #000000;
}

.c0:hover {
  background: #f4f5f6;
}

.c2 {
  white-space: nowrap;
}

<button
  class="c0"
  size="1"
  type="button"
>
  <p
    class="c1 c2"
    color="primary"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width displayStyle: 1 size: 1 disabled: true 1`] = `
.c1 {
  margin: 0;
  font-size: 1.2rem;
  line-height: 1.67;
  font-weight: 400;
  -webkit-letter-spacing: 0.1rem;
  -moz-letter-spacing: 0.1rem;
  -ms-letter-spacing: 0.1rem;
  letter-spacing: 0.1rem;
  text-transform: uppercase;
  color: #000000;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: none;
  -webkit-transition: background 250ms ease-in-out, color 250ms ease-in-out, border 250ms ease-in-out;
  transition: background 250ms ease-in-out, color 250ms ease-in-out, border 250ms ease-in-out;
  cursor: pointer;
  outline: none;
  box-sizing: border-box;
  width: 17.6rem;
  pointer-events: none;
  height: 4rem;
  border-radius: 0.4rem;
  border: 0.1rem solid #000000;
  border: 0.1rem solid #d2d6db;
}

.c0 g path {
  fill: #000000;
}

.c0 p {
  color: #a5a5a5;
}

.c0 g path {
  fill: #a5a5a5;
}

.c0:hover {
  background: #f4f5f6;
}

.c2 {
  white-space: nowrap;
}

<button
  class="c0"
  disabled=""
  size="1"
  type="button"
>
  <p
    class="c1 c2"
    color="primary"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width displayStyle: 1 size: 2 disabled: false 1`] = `
.c1 {
  margin: 0;
  font-size: 1.2rem;
  line-height: 1.67;
  font-weight: 400;
  -webkit-letter-spacing: 0.1rem;
  -moz-letter-spacing: 0.1rem;
  -ms-letter-spacing: 0.1rem;
  letter-spacing: 0.1rem;
  text-transform: uppercase;
  color: #000000;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: none;
  -webkit-transition: background 250ms ease-in-out, color 250ms ease-in-out, border 250ms ease-in-out;
  transition: background 250ms ease-in-out, color 250ms ease-in-out, border 250ms ease-in-out;
  cursor: pointer;
  outline: none;
  box-sizing: border-box;
  width: 28rem;
  height: 4rem;
  border-radius: 0.4rem;
  border: 0.1rem solid #000000;
}

.c0 g path {
  fill: #000000;
}

.c0:hover {
  background: #f4f5f6;
}

.c2 {
  white-space: nowrap;
}

<button
  class="c0"
  size="2"
  type="button"
>
  <p
    class="c1 c2"
    color="primary"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width displayStyle: 1 size: 2 disabled: true 1`] = `
.c1 {
  margin: 0;
  font-size: 1.2rem;
  line-height: 1.67;
  font-weight: 400;
  -webkit-letter-spacing: 0.1rem;
  -moz-letter-spacing: 0.1rem;
  -ms-letter-spacing: 0.1rem;
  letter-spacing: 0.1rem;
  text-transform: uppercase;
  color: #000000;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: none;
  -webkit-transition: background 250ms ease-in-out, color 250ms ease-in-out, border 250ms ease-in-out;
  transition: background 250ms ease-in-out, color 250ms ease-in-out, border 250ms ease-in-out;
  cursor: pointer;
  outline: none;
  box-sizing: border-box;
  width: 28rem;
  pointer-events: none;
  height: 4rem;
  border-radius: 0.4rem;
  border: 0.1rem solid #000000;
  border: 0.1rem solid #d2d6db;
}

.c0 g path {
  fill: #000000;
}

.c0 p {
  color: #a5a5a5;
}

.c0 g path {
  fill: #a5a5a5;
}

.c0:hover {
  background: #f4f5f6;
}

.c2 {
  white-space: nowrap;
}

<button
  class="c0"
  disabled=""
  size="2"
  type="button"
>
  <p
    class="c1 c2"
    color="primary"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width with icon displayStyle: 0 size: 0 disabled: false 1`] = `
.c3 {
  margin: 0;
  font-size: 1.2rem;
  line-height: 1.67;
  font-weight: 400;
  -webkit-letter-spacing: 0.1rem;
  -moz-letter-spacing: 0.1rem;
  -ms-letter-spacing: 0.1rem;
  letter-spacing: 0.1rem;
  text-transform: uppercase;
  color: #000000;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 2.8rem;
  width: 2.8rem;
  position: relative;
  font-style: normal;
}

.c1 svg {
  width: 100%;
  height: 100%;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: none;
  -webkit-transition: background 250ms ease-in-out, color 250ms ease-in-out, border 250ms ease-in-out;
  transition: background 250ms ease-in-out, color 250ms ease-in-out, border 250ms ease-in-out;
  cursor: pointer;
  outline: none;
  box-sizing: border-box;
  width: 13.2rem;
  height: 4rem;
  border-radius: 0.4rem;
  background: #3b3f42;
  border: 0.1rem solid #3b3f42;
}

.c0:hover {
  background: #000000;
}

.c0 g path {
  fill: #ffffff;
}

.c0 p {
  color: #ffffff;
}

.c2 {
  margin: 0 0.8rem 0 0;
}

.c4 {
  white-space: nowrap;
}

<button
  class="c0"
  type="button"
>
  <span
    class="c1 c2"
    data-testid="icon-Upload"
    height="2.8"
    width="2.8"
  >
    <test-file-stub
      image="test-file-stub"
    />
  </span>
  <p
    class="c3 c4"
    color="primary"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width with icon displayStyle: 0 size: 0 disabled: true 1`] = `
.c3 {
  margin: 0;
  font-size: 1.2rem;
  line-height: 1.67;
  font-weight: 400;
  -webkit-letter-spacing: 0.1rem;
  -moz-letter-spacing: 0.1rem;
  -ms-letter-spacing: 0.1rem;
  letter-spacing: 0.1rem;
  text-transform: uppercase;
  color: #000000;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 2.8rem;
  width: 2.8rem;
  position: relative;
  font-style: normal;
}

.c1 svg {
  width: 100%;
  height: 100%;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: none;
  -webkit-transition: background 250ms ease-in-out, color 250ms ease-in-out, border 250ms ease-in-out;
  transition: background 250ms ease-in-out, color 250ms ease-in-out, border 250ms ease-in-out;
  cursor: pointer;
  outline: none;
  box-sizing: border-box;
  width: 13.2rem;
  pointer-events: none;
  height: 4rem;
  border-radius: 0.4rem;
  background: #3b3f42;
  border: 0.1rem solid #3b3f42;
  background: #d2d6db;
  border: 0.1rem solid #d2d6db;
}

.c0:hover {
  background: #000000;
}

.c0 g path {
  fill: #ffffff;
}

.c0 p {
  color: #ffffff;
}

.c0 p {
  color: #6a6a6a;
}

.c0 g path {
  fill: #6a6a6a;
}

.c2 {
  margin: 0 0.8rem 0 0;
}

.c4 {
  white-space: nowrap;
}

<button
  class="c0"
  disabled=""
  type="button"
>
  <span
    class="c1 c2"
    data-testid="icon-Upload"
    height="2.8"
    width="2.8"
  >
    <test-file-stub
      image="test-file-stub"
    />
  </span>
  <p
    class="c3 c4"
    color="primary"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width with icon displayStyle: 0 size: 1 disabled: false 1`] = `
.c3 {
  margin: 0;
  font-size: 1.2rem;
  line-height: 1.67;
  font-weight: 400;
  -webkit-letter-spacing: 0.1rem;
  -moz-letter-spacing: 0.1rem;
  -ms-letter-spacing: 0.1rem;
  letter-spacing: 0.1rem;
  text-transform: uppercase;
  color: #000000;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 2.8rem;
  width: 2.8rem;
  position: relative;
  font-style: normal;
}

.c1 svg {
  width: 100%;
  height: 100%;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: none;
  -webkit-transition: background 250ms ease-in-out, color 250ms ease-in-out, border 250ms ease-in-out;
  transition: background 250ms ease-in-out, color 250ms ease-in-out, border 250ms ease-in-out;
  cursor: pointer;
  outline: none;
  box-sizing: border-box;
  width: 17.6rem;
  height: 4rem;
  border-radius: 0.4rem;
  background: #3b3f42;
  border: 0.1rem solid #3b3f42;
}

.c0:hover {
  background: #000000;
}

.c0 g path {
  fill: #ffffff;
}

.c0 p {
  color: #ffffff;
}

.c2 {
  margin: 0 0.8rem 0 0;
}

.c4 {
  white-space: nowrap;
}

<button
  class="c0"
  size="1"
  type="button"
>
  <span
    class="c1 c2"
    data-testid="icon-Upload"
    height="2.8"
    width="2.8"
  >
    <test-file-stub
      image="test-file-stub"
    />
  </span>
  <p
    class="c3 c4"
    color="primary"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width with icon displayStyle: 0 size: 1 disabled: true 1`] = `
.c3 {
  margin: 0;
  font-size: 1.2rem;
  line-height: 1.67;
  font-weight: 400;
  -webkit-letter-spacing: 0.1rem;
  -moz-letter-spacing: 0.1rem;
  -ms-letter-spacing: 0.1rem;
  letter-spacing: 0.1rem;
  text-transform: uppercase;
  color: #000000;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 2.8rem;
  width: 2.8rem;
  position: relative;
  font-style: normal;
}

.c1 svg {
  width: 100%;
  height: 100%;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: none;
  -webkit-transition: background 250ms ease-in-out, color 250ms ease-in-out, border 250ms ease-in-out;
  transition: background 250ms ease-in-out, color 250ms ease-in-out, border 250ms ease-in-out;
  cursor: pointer;
  outline: none;
  box-sizing: border-box;
  width: 17.6rem;
  pointer-events: none;
  height: 4rem;
  border-radius: 0.4rem;
  background: #3b3f42;
  border: 0.1rem solid #3b3f42;
  background: #d2d6db;
  border: 0.1rem solid #d2d6db;
}

.c0:hover {
  background: #000000;
}

.c0 g path {
  fill: #ffffff;
}

.c0 p {
  color: #ffffff;
}

.c0 p {
  color: #6a6a6a;
}

.c0 g path {
  fill: #6a6a6a;
}

.c2 {
  margin: 0 0.8rem 0 0;
}

.c4 {
  white-space: nowrap;
}

<button
  class="c0"
  disabled=""
  size="1"
  type="button"
>
  <span
    class="c1 c2"
    data-testid="icon-Upload"
    height="2.8"
    width="2.8"
  >
    <test-file-stub
      image="test-file-stub"
    />
  </span>
  <p
    class="c3 c4"
    color="primary"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width with icon displayStyle: 0 size: 2 disabled: false 1`] = `
.c3 {
  margin: 0;
  font-size: 1.2rem;
  line-height: 1.67;
  font-weight: 400;
  -webkit-letter-spacing: 0.1rem;
  -moz-letter-spacing: 0.1rem;
  -ms-letter-spacing: 0.1rem;
  letter-spacing: 0.1rem;
  text-transform: uppercase;
  color: #000000;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 2.8rem;
  width: 2.8rem;
  position: relative;
  font-style: normal;
}

.c1 svg {
  width: 100%;
  height: 100%;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: none;
  -webkit-transition: background 250ms ease-in-out, color 250ms ease-in-out, border 250ms ease-in-out;
  transition: background 250ms ease-in-out, color 250ms ease-in-out, border 250ms ease-in-out;
  cursor: pointer;
  outline: none;
  box-sizing: border-box;
  width: 28rem;
  height: 4rem;
  border-radius: 0.4rem;
  background: #3b3f42;
  border: 0.1rem solid #3b3f42;
}

.c0:hover {
  background: #000000;
}

.c0 g path {
  fill: #ffffff;
}

.c0 p {
  color: #ffffff;
}

.c2 {
  margin: 0 0.8rem 0 0;
}

.c4 {
  white-space: nowrap;
}

<button
  class="c0"
  size="2"
  type="button"
>
  <span
    class="c1 c2"
    data-testid="icon-Upload"
    height="2.8"
    width="2.8"
  >
    <test-file-stub
      image="test-file-stub"
    />
  </span>
  <p
    class="c3 c4"
    color="primary"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width with icon displayStyle: 0 size: 2 disabled: true 1`] = `
.c3 {
  margin: 0;
  font-size: 1.2rem;
  line-height: 1.67;
  font-weight: 400;
  -webkit-letter-spacing: 0.1rem;
  -moz-letter-spacing: 0.1rem;
  -ms-letter-spacing: 0.1rem;
  letter-spacing: 0.1rem;
  text-transform: uppercase;
  color: #000000;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 2.8rem;
  width: 2.8rem;
  position: relative;
  font-style: normal;
}

.c1 svg {
  width: 100%;
  height: 100%;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: none;
  -webkit-transition: background 250ms ease-in-out, color 250ms ease-in-out, border 250ms ease-in-out;
  transition: background 250ms ease-in-out, color 250ms ease-in-out, border 250ms ease-in-out;
  cursor: pointer;
  outline: none;
  box-sizing: border-box;
  width: 28rem;
  pointer-events: none;
  height: 4rem;
  border-radius: 0.4rem;
  background: #3b3f42;
  border: 0.1rem solid #3b3f42;
  background: #d2d6db;
  border: 0.1rem solid #d2d6db;
}

.c0:hover {
  background: #000000;
}

.c0 g path {
  fill: #ffffff;
}

.c0 p {
  color: #ffffff;
}

.c0 p {
  color: #6a6a6a;
}

.c0 g path {
  fill: #6a6a6a;
}

.c2 {
  margin: 0 0.8rem 0 0;
}

.c4 {
  white-space: nowrap;
}

<button
  class="c0"
  disabled=""
  size="2"
  type="button"
>
  <span
    class="c1 c2"
    data-testid="icon-Upload"
    height="2.8"
    width="2.8"
  >
    <test-file-stub
      image="test-file-stub"
    />
  </span>
  <p
    class="c3 c4"
    color="primary"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width with icon displayStyle: 1 size: 0 disabled: false 1`] = `
.c3 {
  margin: 0;
  font-size: 1.2rem;
  line-height: 1.67;
  font-weight: 400;
  -webkit-letter-spacing: 0.1rem;
  -moz-letter-spacing: 0.1rem;
  -ms-letter-spacing: 0.1rem;
  letter-spacing: 0.1rem;
  text-transform: uppercase;
  color: #000000;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 2.8rem;
  width: 2.8rem;
  position: relative;
  font-style: normal;
}

.c1 svg {
  width: 100%;
  height: 100%;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: none;
  -webkit-transition: background 250ms ease-in-out, color 250ms ease-in-out, border 250ms ease-in-out;
  transition: background 250ms ease-in-out, color 250ms ease-in-out, border 250ms ease-in-out;
  cursor: pointer;
  outline: none;
  box-sizing: border-box;
  width: 13.2rem;
  height: 4rem;
  border-radius: 0.4rem;
  border: 0.1rem solid #000000;
}

.c0 g path {
  fill: #000000;
}

.c0:hover {
  background: #f4f5f6;
}

.c2 {
  margin: 0 0.8rem 0 0;
}

.c4 {
  white-space: nowrap;
}

<button
  class="c0"
  type="button"
>
  <span
    class="c1 c2"
    data-testid="icon-Upload"
    height="2.8"
    width="2.8"
  >
    <test-file-stub
      image="test-file-stub"
    />
  </span>
  <p
    class="c3 c4"
    color="primary"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width with icon displayStyle: 1 size: 0 disabled: true 1`] = `
.c3 {
  margin: 0;
  font-size: 1.2rem;
  line-height: 1.67;
  font-weight: 400;
  -webkit-letter-spacing: 0.1rem;
  -moz-letter-spacing: 0.1rem;
  -ms-letter-spacing: 0.1rem;
  letter-spacing: 0.1rem;
  text-transform: uppercase;
  color: #000000;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 2.8rem;
  width: 2.8rem;
  position: relative;
  font-style: normal;
}

.c1 svg {
  width: 100%;
  height: 100%;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: none;
  -webkit-transition: background 250ms ease-in-out, color 250ms ease-in-out, border 250ms ease-in-out;
  transition: background 250ms ease-in-out, color 250ms ease-in-out, border 250ms ease-in-out;
  cursor: pointer;
  outline: none;
  box-sizing: border-box;
  width: 13.2rem;
  pointer-events: none;
  height: 4rem;
  border-radius: 0.4rem;
  border: 0.1rem solid #000000;
  border: 0.1rem solid #d2d6db;
}

.c0 g path {
  fill: #000000;
}

.c0 p {
  color: #a5a5a5;
}

.c0 g path {
  fill: #a5a5a5;
}

.c0:hover {
  background: #f4f5f6;
}

.c2 {
  margin: 0 0.8rem 0 0;
}

.c4 {
  white-space: nowrap;
}

<button
  class="c0"
  disabled=""
  type="button"
>
  <span
    class="c1 c2"
    data-testid="icon-Upload"
    height="2.8"
    width="2.8"
  >
    <test-file-stub
      image="test-file-stub"
    />
  </span>
  <p
    class="c3 c4"
    color="primary"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width with icon displayStyle: 1 size: 1 disabled: false 1`] = `
.c3 {
  margin: 0;
  font-size: 1.2rem;
  line-height: 1.67;
  font-weight: 400;
  -webkit-letter-spacing: 0.1rem;
  -moz-letter-spacing: 0.1rem;
  -ms-letter-spacing: 0.1rem;
  letter-spacing: 0.1rem;
  text-transform: uppercase;
  color: #000000;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 2.8rem;
  width: 2.8rem;
  position: relative;
  font-style: normal;
}

.c1 svg {
  width: 100%;
  height: 100%;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: none;
  -webkit-transition: background 250ms ease-in-out, color 250ms ease-in-out, border 250ms ease-in-out;
  transition: background 250ms ease-in-out, color 250ms ease-in-out, border 250ms ease-in-out;
  cursor: pointer;
  outline: none;
  box-sizing: border-box;
  width: 17.6rem;
  height: 4rem;
  border-radius: 0.4rem;
  border: 0.1rem solid #000000;
}

.c0 g path {
  fill: #000000;
}

.c0:hover {
  background: #f4f5f6;
}

.c2 {
  margin: 0 0.8rem 0 0;
}

.c4 {
  white-space: nowrap;
}

<button
  class="c0"
  size="1"
  type="button"
>
  <span
    class="c1 c2"
    data-testid="icon-Upload"
    height="2.8"
    width="2.8"
  >
    <test-file-stub
      image="test-file-stub"
    />
  </span>
  <p
    class="c3 c4"
    color="primary"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width with icon displayStyle: 1 size: 1 disabled: true 1`] = `
.c3 {
  margin: 0;
  font-size: 1.2rem;
  line-height: 1.67;
  font-weight: 400;
  -webkit-letter-spacing: 0.1rem;
  -moz-letter-spacing: 0.1rem;
  -ms-letter-spacing: 0.1rem;
  letter-spacing: 0.1rem;
  text-transform: uppercase;
  color: #000000;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 2.8rem;
  width: 2.8rem;
  position: relative;
  font-style: normal;
}

.c1 svg {
  width: 100%;
  height: 100%;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: none;
  -webkit-transition: background 250ms ease-in-out, color 250ms ease-in-out, border 250ms ease-in-out;
  transition: background 250ms ease-in-out, color 250ms ease-in-out, border 250ms ease-in-out;
  cursor: pointer;
  outline: none;
  box-sizing: border-box;
  width: 17.6rem;
  pointer-events: none;
  height: 4rem;
  border-radius: 0.4rem;
  border: 0.1rem solid #000000;
  border: 0.1rem solid #d2d6db;
}

.c0 g path {
  fill: #000000;
}

.c0 p {
  color: #a5a5a5;
}

.c0 g path {
  fill: #a5a5a5;
}

.c0:hover {
  background: #f4f5f6;
}

.c2 {
  margin: 0 0.8rem 0 0;
}

.c4 {
  white-space: nowrap;
}

<button
  class="c0"
  disabled=""
  size="1"
  type="button"
>
  <span
    class="c1 c2"
    data-testid="icon-Upload"
    height="2.8"
    width="2.8"
  >
    <test-file-stub
      image="test-file-stub"
    />
  </span>
  <p
    class="c3 c4"
    color="primary"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width with icon displayStyle: 1 size: 2 disabled: false 1`] = `
.c3 {
  margin: 0;
  font-size: 1.2rem;
  line-height: 1.67;
  font-weight: 400;
  -webkit-letter-spacing: 0.1rem;
  -moz-letter-spacing: 0.1rem;
  -ms-letter-spacing: 0.1rem;
  letter-spacing: 0.1rem;
  text-transform: uppercase;
  color: #000000;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 2.8rem;
  width: 2.8rem;
  position: relative;
  font-style: normal;
}

.c1 svg {
  width: 100%;
  height: 100%;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: none;
  -webkit-transition: background 250ms ease-in-out, color 250ms ease-in-out, border 250ms ease-in-out;
  transition: background 250ms ease-in-out, color 250ms ease-in-out, border 250ms ease-in-out;
  cursor: pointer;
  outline: none;
  box-sizing: border-box;
  width: 28rem;
  height: 4rem;
  border-radius: 0.4rem;
  border: 0.1rem solid #000000;
}

.c0 g path {
  fill: #000000;
}

.c0:hover {
  background: #f4f5f6;
}

.c2 {
  margin: 0 0.8rem 0 0;
}

.c4 {
  white-space: nowrap;
}

<button
  class="c0"
  size="2"
  type="button"
>
  <span
    class="c1 c2"
    data-testid="icon-Upload"
    height="2.8"
    width="2.8"
  >
    <test-file-stub
      image="test-file-stub"
    />
  </span>
  <p
    class="c3 c4"
    color="primary"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots Standard/fixed width with icon displayStyle: 1 size: 2 disabled: true 1`] = `
.c3 {
  margin: 0;
  font-size: 1.2rem;
  line-height: 1.67;
  font-weight: 400;
  -webkit-letter-spacing: 0.1rem;
  -moz-letter-spacing: 0.1rem;
  -ms-letter-spacing: 0.1rem;
  letter-spacing: 0.1rem;
  text-transform: uppercase;
  color: #000000;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 2.8rem;
  width: 2.8rem;
  position: relative;
  font-style: normal;
}

.c1 svg {
  width: 100%;
  height: 100%;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: none;
  -webkit-transition: background 250ms ease-in-out, color 250ms ease-in-out, border 250ms ease-in-out;
  transition: background 250ms ease-in-out, color 250ms ease-in-out, border 250ms ease-in-out;
  cursor: pointer;
  outline: none;
  box-sizing: border-box;
  width: 28rem;
  pointer-events: none;
  height: 4rem;
  border-radius: 0.4rem;
  border: 0.1rem solid #000000;
  border: 0.1rem solid #d2d6db;
}

.c0 g path {
  fill: #000000;
}

.c0 p {
  color: #a5a5a5;
}

.c0 g path {
  fill: #a5a5a5;
}

.c0:hover {
  background: #f4f5f6;
}

.c2 {
  margin: 0 0.8rem 0 0;
}

.c4 {
  white-space: nowrap;
}

<button
  class="c0"
  disabled=""
  size="2"
  type="button"
>
  <span
    class="c1 c2"
    data-testid="icon-Upload"
    height="2.8"
    width="2.8"
  >
    <test-file-stub
      image="test-file-stub"
    />
  </span>
  <p
    class="c3 c4"
    color="primary"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots With intl message displayStyle: 0 size: 2 disabled: false 1`] = `
.c1 {
  margin: 0;
  font-size: 1.2rem;
  line-height: 1.67;
  font-weight: 400;
  -webkit-letter-spacing: 0.1rem;
  -moz-letter-spacing: 0.1rem;
  -ms-letter-spacing: 0.1rem;
  letter-spacing: 0.1rem;
  text-transform: uppercase;
  color: #000000;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: none;
  -webkit-transition: background 250ms ease-in-out, color 250ms ease-in-out, border 250ms ease-in-out;
  transition: background 250ms ease-in-out, color 250ms ease-in-out, border 250ms ease-in-out;
  cursor: pointer;
  outline: none;
  box-sizing: border-box;
  width: 28rem;
  height: 4rem;
  border-radius: 0.4rem;
  background: #3b3f42;
  border: 0.1rem solid #3b3f42;
}

.c0:hover {
  background: #000000;
}

.c0 g path {
  fill: #ffffff;
}

.c0 p {
  color: #ffffff;
}

.c2 {
  white-space: nowrap;
}

<button
  class="c0"
  size="2"
  type="button"
>
  <p
    class="c1 c2"
    color="primary"
  >
    Click
  </p>
</button>
`;

exports[`Button matches snapshots With intl message displayStyle: 0 size: 2 disabled: false 2`] = `
.c1 {
  margin: 0;
  font-size: 1.2rem;
  line-height: 1.67;
  font-weight: 400;
  -webkit-letter-spacing: 0.1rem;
  -moz-letter-spacing: 0.1rem;
  -ms-letter-spacing: 0.1rem;
  letter-spacing: 0.1rem;
  text-transform: uppercase;
  color: #000000;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: none;
  -webkit-transition: background 250ms ease-in-out, color 250ms ease-in-out, border 250ms ease-in-out;
  transition: background 250ms ease-in-out, color 250ms ease-in-out, border 250ms ease-in-out;
  cursor: pointer;
  outline: none;
  box-sizing: border-box;
  width: 28rem;
  height: 4rem;
  border-radius: 0.4rem;
  background: #3b3f42;
  border: 0.1rem solid #3b3f42;
}

.c0:hover {
  background: #000000;
}

.c0 g path {
  fill: #ffffff;
}

.c0 p {
  color: #ffffff;
}

.c2 {
  white-space: nowrap;
}

<button
  class="c0"
  size="2"
  type="button"
>
  <p
    class="c1 c2"
    color="primary"
  >
    [value] module.news
  </p>
</button>
`;
